# ModDotPlot

./: .readthedocs.yaml  CITATION.cff  LICENSE  README.md  const.py  pyproject.toml  setup.py
.github/workflows/: black.yml  publish-to-pypi.yml
config/: config.json  hg002v1.1.cenSatv2.0.bed
docs/: conf.py  index.rst
moddotplot/: __main__.py  const.py  estimate_identity.py  interactive.py  mod_identity.py  moddotplot.py  parse_fasta.py  plot.r  static_plots.py
sequences/: Arabadopsis_chr1_centromere.fa  chr1_cen.fa  chr1_cen.fa.fai  hg002_chr13_MATERNAL:1-4000000.fa  hg002_chr14_MATERNAL:1-4000000.fa
src/moddotplot/: __main__.py  const.py  estimate_identity.py  interactive.py  moddotplot.py  parse_fasta.py  static_plots.py
test/: Chr1_cen.fa  chr14_segment.fa  chr21_segment.fa
